--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
                 </div>
 
                 <ul class="nav-items display-flex">
-                    <li class="list-item"><a class="description" href="">About</a></li>
-                    <li class="list-item"><a class="description" href="">Work</a></li>
-                    <li class="list-item"><a class="description" href="">Testimonials</a></li>
-                    <li class="list-item"><a class="description" href="">Contact</a></li>
+                    <li class="list-item"><a class="description a" href="">About</a></li>
+                    <li class="list-item"><a class="description a" href="">Work</a></li>
+                    <li class="list-item"><a class="description a " href="">Testimonials</a></li>
+                    <li class="list-item"><a class="description a" href="">Contact</a></li>
+
+
+                    <li class="list-item"><a class="bars" href=""><i style="font-size: 2rem; color: white;"
+                                class="fa-solid fa-bars"></i></a></li>
+
+
                 </ul>
             </div>
 
@@ -56,7 +62,7 @@
                 </div>
 
                 <div class="banner-image">
-                    <img src="images/banner.jpg" alt="Profile Image">
+                    <img src="images/image.png" alt="Profile Image">
                 </div>
             </div>
         </section>
