about-me container added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,67 @@
     </header>
 
     <main>
+        <section class="about-me-container">
+            <div class="button-container">
+                <button type="button" class="btn-primary description">About Me</button>
+            </div>
+
+            <div class="about-me-content display-flex">
+                <div class="about-me-image">
+                    <img src="images/sheefat.jpeg" alt="">
+                </div>
+
+                <div class="about-me-text">
+                    <article>
+                        <h2>Curious about me? Here you have it:</h2>
+                        <p class="description2">I'm an enthusiastic, aspiring developer focused on mastering full-stack
+                            development. While I
+                            am early in my career, I am deeply passionate about coding and building digital solutions
+                            that blend functionality with clean design. User experience, writing well-structured code,
+                            and creating responsive, performance-driven websites are some of the key aspects I
+                            prioritize.</p>
+
+                        <p class="description2">I began my web development journey recently and have been constantly
+                            learning and improving
+                            my skills. Every day brings new challenges and opportunities to explore the latest
+                            technologies. Though still at the beginning of my path, I am getting hands-on experience
+                            with modern tools and frameworks like React.js, Node.js, and more. My goal is to evolve into
+                            a well-rounded developer, capable of building scalable and efficient web applications.</p>
+
+                        <p class="description2">I enjoy diving into the full development process—from brainstorming
+                            ideas to deploying
+                            projects. Every step is a chance for me to grow and better understand how to solve
+                            real-world problems with code.</p>
+
+
+                        <p class="description2">When I'm not coding, you might find me exploring tech blogs, soaking in
+                            the experiences of
+                            developers ahead of me, or contributing to open-source projects. You can catch up with me on
+                            Twitter, where I share my journey and lessons learned, or check out my work on GitHub. I'm
+                            eager to continue learning and contributing to the tech community as I advance on my path to
+                            becoming a skilled developer.</p>
+
+                        <div class="quick-talks">
+                            <p class="description2">Finally, Some quick bits about me,
+                            <ul class="about display-flex">
+                                <li>Bsc in Computer Science</li>
+                                <li>Avid Learner</li>
+                                <li>Full time employee</li>
+                                <li>Aspiring Bangladesh hacker</li>
+                            </ul>
+                            </p>
+
+                            <p class="description2">One last thing, I’m open to freelance work as I continue growing my
+                                skills, so feel free
+                                to reach out and say hello! I promise, I don’t bite 😉.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+
+
+        </section>
 
     </main>
 
