skills section added

--- a/index.html
+++ b/index.html
@@ -136,6 +136,68 @@
 
         </section>
 
+        <section class="skills-container">
+            <div class="skill-text">
+                <div class="btn-container">
+                    <button class="btn-primary description">Skills</button>
+                </div>
+                <h3>The skills, tools and technologies I am really good at</h3>
+            </div>
+
+            <div class="skill-content display-flex">
+                <div class="javascript">
+                    <img src="images/icons/icons8-javascript-48.png" alt="">
+                    <p class="description">Javascript</p>
+                </div>
+
+                <div class="typescript">
+                    <img src="images/icons/icons8-typescript-48.png" alt="">
+                    <p class="description">Typescript</p>
+                </div>
+
+                <div class="react">
+                    <img src="images/icons/icons8-react-48.png" alt="">
+                    <p class="description">React</p>
+                </div>
+
+                <div class="nextjs">
+                    <img src="images/icons/icons8-nextjs-48.png" alt="">
+                    <p class="description">Next.js</p>
+                </div>
+
+                <div class="nodejs">
+                    <img src="images/icons/icons8-nodejs.svg" alt="">
+                    <p class="description">Node.js</p>
+                </div>
+
+                <div class="expressjs">
+                    <img src="images/icons/icons8-express-js.svg" alt="">
+                    <p class="description">Express.js</p>
+                </div>
+
+
+                <div class="tailwind">
+                    <img src="images/icons/icons8-tailwind-css.svg" alt="">
+                    <p class="description">Tailwind CSS</p>
+                </div>
+
+                <div class="git">
+                    <img src="images/icons/icons8-git.svg" alt="">
+                    <p class="description">Git</p>
+                </div>
+
+                <div class="figma">
+                    <img src="images/icons/icons8-figma.svg" alt="">
+                    <p class="description">Figma</p>
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+
     </main>
 
     <footer>
