added experience container

--- a/index.html
+++ b/index.html
@@ -197,6 +197,65 @@
 
 
 
+        <section class="experience-container">
+            <div class="experience-header">
+                <button class="btn-primary description">experience</button>
+                <h3>Here is a quick summary of most recent experiences:</h3>
+            </div>
+
+            <div class="experience-card">
+                <ul class="heading display-flex">
+                    <li class="saf1">SAF1AID</li>
+                    <li>Junior Web developer(Intern)
+                        <div class="developer-responsibility">
+                            <ul class="dev-res">
+                                <li>Built Project with HTML, CSS and JavaScript</li>
+                                <li>Make Website Responsive</li>
+                                <li>Deployed website into version control system</li>
+                                <li>Collaborate with team-member</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="date">February 2024 - May 2024</li>
+                </ul>
+            </div>
+
+            <div class="experience-card">
+                <ul class="heading display-flex">
+                    <li class="saf1">Project Algonoutin</li>
+                    <li>Junior Web developer(Intern)
+                        <div class="developer-responsibility">
+                            <ul class="dev-res">
+                                <li>Built Project with HTML, CSS and JavaScript</li>
+                                <li>Make Website Responsive</li>
+                                <li>Deep down with Linux Environment</li>
+                                <li>Deployed website into version control system</li>
+                                <li>Collaborate with team-member</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="date">January 2024 - February 2024</li>
+                </ul>
+            </div>
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </main>
 
