my-work container added

--- a/index.html
+++ b/index.html
@@ -241,7 +241,85 @@
 
         </section>
 
+        <section class="work-container">
+            <div class="experience-header">
+                <button class="btn-primary description">Work</button>
+                <h3>Some of the networthy projects I have built:</h3>
+            </div>
 
+
+            <div class="work-box display-flex">
+                <div class="work-image">
+                    <img src="images/hero.png" alt="">
+                </div>
+
+                <div class="work-text">
+                    <h3>Hero Travel</h3>
+                    <p class="description hero">Hero travel website is an online platform that provides users with a
+                        comprehensive tool to plan, book, and manage their travel experiences. These websites often
+                        offer features such as flight and hotel bookings, destination guides, travel itineraries, and
+                        customer reviews. Users can explore various destinations.</p>
+                </div>
+            </div>
+
+
+            <div class="work-box display-flex">
+
+
+                <div class="work-text2">
+                    <h3>Fitness</h3>
+                    <p class="description hero">A fitness website is an online platform designed to help users achieve
+                        their health and wellness goals. It typically offers a variety of resources such as workout
+                        plans, exercise videos, nutrition advice, and wellness tips. Users can access personalized
+                        fitness programs, track their progress, and connect with a community of like-minded individuals.
+                    </p>
+                </div>
+
+
+                <div class="work-image2">
+                    <img src="images/fitness.png" alt="">
+                </div>
+            </div>
+
+
+            <div class="work-box display-flex">
+                <div class="work-image">
+                    <img src="images/portfolio.png" alt="">
+                </div>
+
+                <div class="work-text">
+                    <h3>My Portfolio</h3>
+                    <p class="description hero">I'm an enthusiastic, aspiring developer focused on mastering full-stack
+                        development. While I am early in my career, I am deeply passionate about coding and building
+                        digital solutions that blend functionality with clean design. User experience, writing
+                        well-structured code, and creating responsive, performance-driven websites are some of the key
+                        aspects I prioritize.
+                    </p>
+                </div>
+            </div>
+
+            <div class="work-box display-flex">
+
+
+                <div class="work-text3">
+                    <h3>Flower</h3>
+                    <p class="description hero">A flower website is an online platform dedicated to showcasing and
+                        selling a wide variety of flowers and floral arrangements. Users can browse through different
+                        types of flowers, bouquets, and plants for various occasions such as weddings, birthdays,
+                        anniversaries, and more. The website typically offers features like flower delivery services,
+                        care tips, and customization options to create personalized floral gifts.
+                    </p>
+                </div>
+
+                <div class="work-image3">
+                    <img src="images/flower.png" alt="">
+                </div>
+            </div>
+
+
+
+
+        </section>
 
 
 
