--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 
         <section class="experience-container">
             <div class="experience-header">
-                <button class="btn-primary description">experience</button>
+                <button class="btn-primary description">Experience</button>
                 <h3>Here is a quick summary of most recent experiences:</h3>
             </div>
 
             <div class="experience-card">
                 <ul class="heading display-flex">
                     <li class="saf1">SAF1AID</li>
-                    <li>Junior Web developer(Intern)
+                    <li>Junior Web developer (Intern)
                         <div class="developer-responsibility">
                             <ul class="dev-res">
                                 <li>Built Project with HTML, CSS and JavaScript</li>
@@ -223,7 +223,7 @@
             <div class="experience-card">
                 <ul class="heading display-flex">
                     <li class="saf1">Project Algonoutin</li>
-                    <li>Junior Web developer(Intern)
+                    <li>Junior Web developer (Intern)
                         <div class="developer-responsibility">
                             <ul class="dev-res">
                                 <li>Built Project with HTML, CSS and JavaScript</li>
@@ -243,7 +243,7 @@
 
         <section class="work-container">
             <div class="experience-header">
-                <button class="btn-primary description">Work</button>
+                <button class="btn-primary description">My-Work</button>
                 <h3>Some of the networthy projects I have built:</h3>
             </div>
 
