--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="banner-content display-flex">
                 <div class="banner-text">
-                    <h1>Hi, I'm Sheefat 👋</h1>
+                    <h1>Hi,I'm Sheefat</h1>
                     <p class="description des">Welcome to my portfolio! I’m a passionate web developer with a growing
                         expertise in HTML, CSS, and JavaScript. I enjoy building responsive and visually appealing
                         websites while continuously expanding my knowledge in front-end and back-end development. My
@@ -333,7 +333,26 @@
 
 
 
+        <section class="get-in-touch-container">
+            <div class="get-touch-content">
+                <button class="btn-primary">Get in Touch</button>
+                <p class="description">What's next? Feel free to reach out to me if you're looking for a developer, have
+                    a query or simply want to connect</p>
 
+                <h3><i style="margin-right: 10px;" class="fa-solid fa-message"></i>minjamin58@gmail.com</h3>
+                <h3><i style="margin-right: 10px;" class="fa-solid fa-phone"></i>01990560989</h3>
+
+                <p class="description">You may also find me on these platform</p>
+
+                <div class="social-media">
+                    <a href="https://github.com/minjamin-ahmmed"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/minjamin-ahmmed-sheefat-4164221b6/"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100007465339158"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
